# hotel-management-system

./: .gitignore  README.md
ai-service/: .env.example  pyproject.toml
ai-service/ai-service/: config.py  main.py
ai-service/ai-service/agents/: chat_agent.py  order_agent.py  recommend_agent.py
ai-service/ai-service/api/: alert.py  chat.py  deps.py  knowledge.py  order_query.py  recommend.py  system.py
ai-service/ai-service/core/: auth.py  cache.py  circuit_breaker.py  context.py  distributed_lock.py  embeddings.py  exceptions.py  file_parser.py  http_client.py  llm.py  logging_config.py  vector_store.py
ai-service/ai-service/data/: ai_hotel.db
ai-service/ai-service/data/chroma/: chroma.sqlite3
ai-service/ai-service/middleware/: auth_middleware.py  error_handler.py  rate_limit.py
ai-service/ai-service/models/: alert.py  chat_log.py  database.py  knowledge.py
ai-service/ai-service/schemas/: alert.py  chat.py  common.py  knowledge.py  order_query.py  recommend.py
ai-service/ai-service/tests/: conftest.py  test_health.py  test_knowledge.py
ai-service/ai-service/tools/: customer_query.py  knowledge_search.py  order_query_tool.py  room_query.py
ai-service/knowledge_files/: hotel_guide.md
hotel-backend/: pom.xml
hotel-backend/Sql文件/: 07_init_service_product.sql  hotel_finance.sql  hotel_order.sql  hotel_room.sql  hotel_system.sql  hotel_user.sql
hotel-backend/common-service/: pom.xml
hotel-backend/finance-service/: pom.xml
hotel-front-client/: App.vue  manifest.json  pages.json  uni.scss
hotel-front-desk/: .env.development  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  前台端界面文档.md
hotel-front-manage/: index.html  package-lock.json  package.json  vite.config.ts
swagger文档/: financeservice.md  orderservice.md  roomservice.md  userservice.md
文档/: ai-service-接口文档.md  common-service-接口文档.md  finance-service-接口文档.md  gateway-service-接口文档.md  order-service-接口文档.md  room-service-接口文档.md  user-service-接口文档.md  依赖版本说明.md  数据库设计文档.md  需求分析.md
(+333 files in other folders)
