[project]
name = "ai-service"
version = "1.0.0"
description = "酒店智能服务（FastAPI + LangChain）"
requires-python = ">=3.13"
dependencies = [
    # Web 框架
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.3",
    # LangChain 生态
    "langchain==0.3.13",
    "langchain-community==0.3.13",
    "langchain-openai==0.3.0",
    "langgraph==0.2.58",
    # 数据库
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    # HTTP 客户端（调用 Java 后端）
    "httpx==0.28.1",
    # 其他
    "python-dotenv==1.0.1",
    "python-multipart==0.0.19",
    # 文件解析（知识库上传）
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "sse-starlette==2.1.3",
    "chromadb==0.5.23",
    "langchain-chroma>=0.2.3",
    "pyjwt>=2.13.0",
    # Kafka 日志
    "kafka-python==2.0.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
